scim2/filter/scimfilter_parser.go
// Code generated from SCIMFilter.g4 by ANTLR 4.13.2. DO NOT EDIT.

package filter // SCIMFilter
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type SCIMFilterParser struct {
	*antlr.BaseParser
}

var SCIMFilterParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func scimfilterParserInit() {
	staticData := &SCIMFilterParserStaticData
	staticData.LiteralNames = []string{
		"", "'not'", "'('", "')'", "'['", "']'", "'pr'", "'and'", "'or'", "'eq'",
		"'ne'", "'co'", "'sw'", "'ew'", "'gt'", "'lt'", "'ge'", "'le'", "'\"'",
		"'\"\"'", "'-'", "'_'", "'.'", "'false'", "'null'", "'true'", "'\\r'",
		"'\\n'", "", "", "", "", "", "'\\'",
	}
	staticData.SymbolicNames = []string{
		"", "NOT", "OPEN_PARA", "CLOSE_PARA", "OPEN_BRACKET", "CLOSE_BRACKET",
		"PR", "AND", "OR", "EQ", "NE", "CO", "SW", "EW", "GT", "LT", "GE", "LE",
		"QUOTE", "DOUBLE_QUOTE", "HYPHEN", "UNDERSCORE", "DOT", "FALSE", "NULL",
		"TRUE", "NEW_RETURN", "NEW_LINE", "ALPHA", "DIGIT", "SP", "URI", "ATTR_NAME",
		"DOUBLE_SLASH", "QUOTE_SLASH", "ANY",
	}
	staticData.RuleNames = []string{
		"expression", "filter", "moreFilters", "filterExpression", "closedFilter",
		"notFilter", "valuePath", "attrExp", "filterOperator", "valuePresent",
		"compValue", "stringValue", "number", "compareOp", "attrPath", "subAttr",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// SCIMFilterParserInit initializes any static state used to implement SCIMFilterParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewSCIMFilterParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func SCIMFilterParserInit() {
	staticData := &SCIMFilterParserStaticData
	staticData.once.Do(scimfilterParserInit)
}

// NewSCIMFilterParser produces a new parser instance for the optional input antlr.TokenStream.
func NewSCIMFilterParser(input antlr.TokenStream) *SCIMFilterParser {
	SCIMFilterParserInit()
	this := new(SCIMFilterParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &SCIMFilterParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "SCIMFilter.g4"

	return this
}

// SCIMFilterParser tokens.
const (
	SCIMFilterParserEOF           = antlr.TokenEOF
	SCIMFilterParserNOT           = 1
	SCIMFilterParserOPEN_PARA     = 2
	SCIMFilterParserCLOSE_PARA    = 3
	SCIMFilterParserOPEN_BRACKET  = 4
	SCIMFilterParserCLOSE_BRACKET = 5
	SCIMFilterParserPR            = 6
	SCIMFilterParserAND           = 7
	SCIMFilterParserOR            = 8
	SCIMFilterParserEQ            = 9
	SCIMFilterParserNE            = 10
	SCIMFilterParserCO            = 11
	SCIMFilterParserSW            = 12
	SCIMFilterParserEW            = 13
	SCIMFilterParserGT            = 14
	SCIMFilterParserLT            = 15
	SCIMFilterParserGE            = 16
	SCIMFilterParserLE            = 17
	SCIMFilterParserQUOTE         = 18
	SCIMFilterParserDOUBLE_QUOTE  = 19
	SCIMFilterParserHYPHEN        = 20
	SCIMFilterParserUNDERSCORE    = 21
	SCIMFilterParserDOT           = 22
	SCIMFilterParserFALSE         = 23
	SCIMFilterParserNULL          = 24
	SCIMFilterParserTRUE          = 25
	SCIMFilterParserNEW_RETURN    = 26
	SCIMFilterParserNEW_LINE      = 27
	SCIMFilterParserALPHA         = 28
	SCIMFilterParserDIGIT         = 29
	SCIMFilterParserSP            = 30
	SCIMFilterParserURI           = 31
	SCIMFilterParserATTR_NAME     = 32
	SCIMFilterParserDOUBLE_SLASH  = 33
	SCIMFilterParserQUOTE_SLASH   = 34
	SCIMFilterParserANY           = 35
)

// SCIMFilterParser rules.
const (
	SCIMFilterParserRULE_expression       = 0
	SCIMFilterParserRULE_filter           = 1
	SCIMFilterParserRULE_moreFilters      = 2
	SCIMFilterParserRULE_filterExpression = 3
	SCIMFilterParserRULE_closedFilter     = 4
	SCIMFilterParserRULE_notFilter        = 5
	SCIMFilterParserRULE_valuePath        = 6
	SCIMFilterParserRULE_attrExp          = 7
	SCIMFilterParserRULE_filterOperator   = 8
	SCIMFilterParserRULE_valuePresent     = 9
	SCIMFilterParserRULE_compValue        = 10
	SCIMFilterParserRULE_stringValue      = 11
	SCIMFilterParserRULE_number           = 12
	SCIMFilterParserRULE_compareOp        = 13
	SCIMFilterParserRULE_attrPath         = 14
	SCIMFilterParserRULE_subAttr          = 15
)

// IExpressionContext is an interface to support dynamic dispatch.
type IExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Filter() IFilterContext
	EOF() antlr.TerminalNode

	// IsExpressionContext differentiates from other interfaces.
	IsExpressionContext()
}

type ExpressionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExpressionContext() *ExpressionContext {
	var p = new(ExpressionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SCIMFilterParserRULE_expression
	return p
}

func InitEmptyExpressionContext(p *ExpressionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SCIMFilterParserRULE_expression
}

func (*ExpressionContext) IsExpressionContext() {}

func NewExpressionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExpressionContext {
	var p = new(ExpressionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SCIMFilterParserRULE_expression

	return p
}

func (s *ExpressionContext) GetParser() antlr.Parser { return s.parser }

func (s *ExpressionContext) Filter() IFilterContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFilterContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFilterContext)
}

func (s *ExpressionContext) EOF() antlr.TerminalNode {
	return s.GetToken(SCIMFilterParserEOF, 0)
}

func (s *ExpressionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpressionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ExpressionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SCIMFilterListener); ok {
		listenerT.EnterExpression(s)
	}
}

func (s *ExpressionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SCIMFilterListener); ok {
		listenerT.ExitExpression(s)
	}
}

func (p *SCIMFilterParser) Expression() (localctx IExpressionContext) {
	localctx = NewExpressionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SCIMFilterParserRULE_expression)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(32)
		p.Filter()
	}
	{
		p.SetState(33)
		p.Match(SCIMFilterParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IFilterContext is an interface to support dynamic dispatch.
type IFilterContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	FilterExpression() IFilterExpressionContext
	MoreFilters() IMoreFiltersContext

	// IsFilterContext differentiates from other interfaces.
	IsFilterContext()
}

type FilterContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFilterContext() *FilterContext {
	var p = new(FilterContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SCIMFilterParserRULE_filter
	return p
}

func InitEmptyFilterContext(p *FilterContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SCIMFilterParserRULE_filter
}

func (*FilterContext) IsFilterContext() {}

func NewFilterContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FilterContext {
	var p = new(FilterContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SCIMFilterParserRULE_filter

	return p
}

func (s *FilterContext) GetParser() antlr.Parser { return s.parser }

func (s *FilterContext) FilterExpression() IFilterExpressionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFilterExpressionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFilterExpressionContext)
}

func (s *FilterContext) MoreFilters() IMoreFiltersContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMoreFiltersContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMoreFiltersContext)
}

func (s *FilterContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FilterContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FilterContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SCIMFilterListener); ok {
		listenerT.EnterFilter(s)
	}
}

func (s *FilterContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SCIMFilterListener); ok {
		listenerT.ExitFilter(s)
	}
}

func (p *SCIMFilterParser) Filter() (localctx IFilterContext) {
	localctx = NewFilterContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SCIMFilterParserRULE_filter)
	p.SetState(37)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 0, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(35)
			p.FilterExpression()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(36)
			p.MoreFilters()
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IMoreFiltersContext is an interface to support dynamic dispatch.
type IMoreFiltersContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	FilterExpression() IFilterExpressionContext
	AllSP() []antlr.TerminalNode
	SP(i int) antlr.TerminalNode
	FilterOperator() IFilterOperatorContext
	Filter() IFilterContext

	// IsMoreFiltersContext differentiates from other interfaces.
	IsMoreFiltersContext()
}

type MoreFiltersContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMoreFiltersContext() *MoreFiltersContext {
	var p = new(MoreFiltersContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SCIMFilterParserRULE_moreFilters
	return p
}

func InitEmptyMoreFiltersContext(p *MoreFiltersContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SCIMFilterParserRULE_moreFilters
}

func (*MoreFiltersContext) IsMoreFiltersContext() {}

func NewMoreFiltersContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MoreFiltersContext {
	var p = new(MoreFiltersContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SCIMFilterParserRULE_moreFilters

	return p
}

func (s *MoreFiltersContext) GetParser() antlr.Parser { return s.parser }

func (s *MoreFiltersContext) FilterExpression() IFilterExpressionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFilterExpressionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFilterExpressionContext)
}

func (s *MoreFiltersContext) AllSP() []antlr.TerminalNode {
	return s.GetTokens(SCIMFilterParserSP)
}

func (s *MoreFiltersContext) SP(i int) antlr.TerminalNode {
	return s.GetToken(SCIMFilterParserSP, i)
}

func (s *MoreFiltersContext) FilterOperator() IFilterOperatorContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFilterOperatorContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFilterOperatorContext)
}

func (s *MoreFiltersContext) Filter() IFilterContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFilterContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFilterContext)
}

func (s *MoreFiltersContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MoreFiltersContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MoreFiltersContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SCIMFilterListener); ok {
		listenerT.EnterMoreFilters(s)
	}
}

func (s *MoreFiltersContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SCIMFilterListener); ok {
		listenerT.ExitMoreFilters(s)
	}
}

func (p *SCIMFilterParser) MoreFilters() (localctx IMoreFiltersContext) {
	localctx = NewMoreFiltersContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, SCIMFilterParserRULE_moreFilters)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(39)
		p.FilterExpression()
	}
	{
		p.SetState(40)
		p.Match(SCIMFilterParserSP)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(41)
		p.FilterOperator()
	}
	{
		p.SetState(42)
		p.Match(SCIMFilterParserSP)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(43)
		p.Filter()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IFilterExpressionContext is an interface to support dynamic dispatch.
type IFilterExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AttrExp() IAttrExpContext
	ClosedFilter() IClosedFilterContext
	NotFilter() INotFilterContext
	ValuePath() IValuePathContext

	// IsFilterExpressionContext differentiates from other interfaces.
	IsFilterExpressionContext()
}

type FilterExpressionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFilterExpressionContext() *FilterExpressionContext {
	var p = new(FilterExpressionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SCIMFilterParserRULE_filterExpression
	return p
}

func InitEmptyFilterExpressionContext(p *FilterExpressionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SCIMFilterParserRULE_filterExpression
}

func (*FilterExpressionContext) IsFilterExpressionContext() {}

func NewFilterExpressionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FilterExpressionContext {
	var p = new(FilterExpressionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SCIMFilterParserRULE_filterExpression

	return p
}

func (s *FilterExpressionContext) GetParser() antlr.Parser { return s.parser }

func (s *FilterExpressionContext) AttrExp() IAttrExpContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAttrExpContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAttrExpContext)
}

func (s *FilterExpressionContext) ClosedFilter() IClosedFilterContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IClosedFilterContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IClosedFilterContext)
}

func (s *FilterExpressionContext) NotFilter() INotFilterContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INotFilterContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INotFilterContext)
}

func (s *FilterExpressionContext) ValuePath() IValuePathContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IValuePathContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IValuePathContext)
}

func (s *FilterExpressionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FilterExpressionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FilterExpressionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SCIMFilterListener); ok {
		listenerT.EnterFilterExpression(s)
	}
}

func (s *FilterExpressionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SCIMFilterListener); ok {
		listenerT.ExitFilterExpression(s)
	}
}

func (p *SCIMFilterParser) FilterExpression() (localctx IFilterExpressionContext) {
	localctx = NewFilterExpressionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, SCIMFilterParserRULE_filterExpression)
	p.SetState(49)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 1, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(45)
			p.AttrExp()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(46)
			p.ClosedFilter()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(47)
			p.NotFilter()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(48)
			p.ValuePath()
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IClosedFilterContext is an interface to support dynamic dispatch.
type IClosedFilterContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	OPEN_PARA() antlr.TerminalNode
	Filter() IFilterContext
	CLOSE_PARA() antlr.TerminalNode

	// IsClosedFilterContext differentiates from other interfaces.
	IsClosedFilterContext()
}

type ClosedFilterContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyClosedFilterContext() *ClosedFilterContext {
	var p = new(ClosedFilterContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SCIMFilterParserRULE_closedFilter
	return p
}

func InitEmptyClosedFilterContext(p *ClosedFilterContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SCIMFilterParserRULE_closedFilter
}

func (*ClosedFilterContext) IsClosedFilterContext() {}

func NewClosedFilterContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ClosedFilterContext {
	var p = new(ClosedFilterContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SCIMFilterParserRULE_closedFilter

	return p
}

func (s *ClosedFilterContext) GetParser() antlr.Parser { return s.parser }

func (s *ClosedFilterContext) OPEN_PARA() antlr.TerminalNode {
	return s.GetToken(SCIMFilterParserOPEN_PARA, 0)
}

func (s *ClosedFilterContext) Filter() IFilterContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFilterContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFilterContext)
}

func (s *ClosedFilterContext) CLOSE_PARA() antlr.TerminalNode {
	return s.GetToken(SCIMFilterParserCLOSE_PARA, 0)
}

func (s *ClosedFilterContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ClosedFilterContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ClosedFilterContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SCIMFilterListener); ok {
		listenerT.EnterClosedFilter(s)
	}
}

func (s *ClosedFilterContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SCIMFilterListener); ok {
		listenerT.ExitClosedFilter(s)
	}
}

func (p *SCIMFilterParser) ClosedFilter() (localctx IClosedFilterContext) {
	localctx = NewClosedFilterContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, SCIMFilterParserRULE_closedFilter)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(51)
		p.Match(SCIMFilterParserOPEN_PARA)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(52)
		p.Filter()
	}
	{
		p.SetState(53)
		p.Match(SCIMFilterParserCLOSE_PARA)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// INotFilterContext is an interface to support dynamic dispatch.
type INotFilterContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	NOT() antlr.TerminalNode
	ClosedFilter() IClosedFilterContext

	// IsNotFilterContext differentiates from other interfaces.
	IsNotFilterContext()
}

type NotFilterContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNotFilterContext() *NotFilterContext {
	var p = new(NotFilterContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SCIMFilterParserRULE_notFilter
	return p
}

func InitEmptyNotFilterContext(p *NotFilterContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SCIMFilterParserRULE_notFilter
}

func (*NotFilterContext) IsNotFilterContext() {}

func NewNotFilterContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *NotFilterContext {
	var p = new(NotFilterContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = SCIMFilterParserRULE_notFilter

	return p
}

func (s *NotFilterContext) GetParser() antlr.Parser { return s.parser }

func (s *NotFilterContext) NOT() antlr.TerminalNode {
	return s.GetToken(SCIMFilterParserNOT, 0)
}

func (s *NotFilterContext) ClosedFilter() IClosedFilterContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IClosedFilterContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IClosedFilterContext)
}

func (s *NotFilterContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NotFilterContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *NotFilterContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SCIMFilterListener); ok {
		listenerT.EnterNotFilter(s)
	}
}

func (s *NotFilterContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SCIMFilterListener); ok {
		listenerT.ExitNotFilter(s)
	}
}

func (p *SCIMFilterParser) NotFilter() (localctx INotFilterContext) {
	localctx = NewNotFilterContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, SCIMFilterParserRULE_notFilter)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(55)
		p.Match(SCIMFilterParserNOT)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(56)
		p.ClosedFilter()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IValuePathContext is an interface to support dynamic dispatch.
type IValuePathContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AttrPath() IAttrPathContext
	OPEN_BRACKET() antlr.TerminalNode
	Filter() IFilterContext
	CLOSE_BRACKET() antlr.TerminalNode

	// IsValuePathContext differentiates from other interfaces.
	IsValuePathContext()
}

type ValuePathContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyValuePathContext() *ValuePathContext {
	var p = new(ValuePathContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SCIMFilterParserRULE_valuePath
	return p
}

func InitEmptyValuePathContext(p *ValuePathContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = SCIMFilterParserRULE_valuePath
}

func (*ValuePathContext) IsValuePathContext() {}

func NewValuePathContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ValuePathContext {
	var p = new(ValuePathContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)
